# rk_max_people

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
src/application/use_cases/: create_person_handler.rs  mod.rs
src/container/: container.rs
src/domain/entity/: person.rs
src/infrastructure/: mod.rs
src/infrastructure/controllers/: create_person_controller.rs  mod.rs
src/infrastructure/repository/: person_repository.rs
src/infrastructure/routes/: person.rs
